feat: add favicon, og tags, netlify redirect

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A quiz platform based on Tagore"
-    />
-    <title>Rabi Quiz</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#ff7f11" />
+  <meta name="description" content="A quiz platform for Guitar lovers built using MERN stack" />
+  <meta name="keywords" content="Quiz platform, Javascript, React, NodeJS, Express, MongoDB, MERN, Dev project" />
+
+  <meta property="og:title" content="RabiQuiz">
+  <meta property="og:url" content="https://rabiquiz.netlify.app">
+  <meta property="og:description" content="A quiz platform for Guitar lovers built using MERN stack">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://i.imgur.com/LjBdf2y.png">
+  <title>RabiQuiz</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
